[project]
name = "genpac"
version = "3.1.0.dev1"
description = "convert gfwlist to pac or other formats, support custom rules."
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "JinnLynn", email = "eatfishlin@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests[socks]>=2.32.3",
    "publicsuffixlist>=1.0.0",
    "PyYAML>=6.0.1",
    "netaddr>=1.3.0"
]
optional-dependencies.server = [
    "Flask>=3.0.3",
    "Flask-APScheduler>=1.13.1",
    "watchdog>=4.0.0"
]
optional-dependencies.dev = [
    "tox>=4.0.0",
    "build",
    "twine",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "pacparser"
]
scripts.genpac = "genpac:run"
scripts."genpac.server" = "genpac.server:run"
classifiers = [
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/JinnLynn/genpac"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data.genpac = ["res/*"]
package-data."genpac.server" = ["templates/*", "static/*"]
